
2.03  Mon Dec  8 16:26:00 2014
	- Patch so token names are not stored with double-quotes when input is double-quoted.
		This means renderers must double-quote things.
	- Patch so the graph's id has the tree node name of 'graph_id' and not 'node_id'.
	- Patch so subgraph ids have the tree node name of 'subgraph_id' and not 'node_id'.
	- Patch docs re See Also.
	- Fix typo in regexp in renderer.
	- Add method decode_node($node) to GraphViz2::Marpa. This is heavily used by the child module
		GraphViz2::Marpa::PathUtils.

2.02  Thu Dec  4 14:11:00 2014
	- If maxlevel (for log) is set to info or above, print 'Parsed tree:' just before printing the
		tree. This is to make it easier to parse the output, if that ever happens, since it now
		indicates which particular tree is next in the log.
	- Remove commented-out code for _post_process().
	- Rename the tree node of the graph's id from 'node_id' to 'graph_id'. This really should have
		been the in original design, and it helps GraphViz2::Marpa::ParthUtils.
	- Update the docs.

2.01  Thu Nov 27 15:37:00 2014
	- Replace string comparison when getting a 'parse exhausted' error from Marpa, with a call to
		Marpa::R2::Scanless::R's exhausted(). That makes the code much nicer.
	- Split Utils.pm into Demo.pm (just for generating the demo pages), Utils.pm (just for testing).
		This way, GraphViz2::Marpa::Config is not needed for testing, and since that module needs
		scripts/copy.config.pl to have been run, CPAN testers were reporting failures.
	- Update scripts/generate.demo.pl.
	- Update MANIFEST.

2.00  Tue Sep  9 09:36:00 2014
	- Warning: GraphViz2::Marpa::PathUtils V 1.05 will not work with GraphViz2::Marpa V 2.00.
		With this release of GraphViz2::Marpa, GraphViz2::Marpa::PathUtils must now be re-written.
	- Rewrite from Marpa::XS to Marpa::R2, and hence build a new, and much more sophisticated,
		grammar. This grammar is based on MarpaX::Demo::StringParser V 2.02.