@@ -12,8 +12,10 @@ This means renderers must double-quote things.
 - Patch so subgraph ids have the tree node name of 'subgraph_id' and not 'node_id'.
 - Patch docs re See Also.
 - Fix typo in regexp in renderer.
-- Add method decode_node($node) to GraphViz2::Marpa. This is heavily used by the child module
+- Add method decode_node($node). This is heavily used by the child module
 GraphViz2::Marpa::PathUtils.
+- Add method decode_tree($tree). This examines the prolog to determine if the tree is 'strict'
+or not, and whether it is a 'digraph' or 'graph'.
 EOT
 
 [V 2.02]
