@@ -7,8 +7,10 @@ Revision history for Perl extension GraphViz2::Marpa.
 	- Patch so subgraph ids have the tree node name of 'subgraph_id' and not 'node_id'.
 	- Patch docs re See Also.
 	- Fix typo in regexp in renderer.
-	- Add method decode_node($node) to GraphViz2::Marpa. This is heavily used by the child module
+	- Add method decode_node($node). This is heavily used by the child module
 		GraphViz2::Marpa::PathUtils.
+	- Add method decode_tree($tree). This examines the prolog to determine if the tree is 'strict'
+		or not, and whether it is a 'digraph' or 'graph'.
 
 2.02  Thu Dec  4 14:11:00 2014
 	- If maxlevel (for log) is set to info or above, print 'Parsed tree:' just before printing the
